--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,4 @@
 # Rewrite an URL from xxx/yyy/zzz type to index.php?controleur=xxx&action=yyy&id=zzz
+# Rewrite an URL from xxx/yyy/zzz type to index.php?controleur=xxx&action=yyy&id=zzz and resend extra parameter like ?page=x with QSA
 RewriteEngine on
-RewriteRule ^([a-zA-Z]*)/?([a-zA-Z]*)?/?([a-zA-Z0-9]*)?/?$ index.php?controller=$1&action=$2&id=$3 [NC,L]
+RewriteRule ^([a-zA-Z]*)/?([a-zA-Z]*)?/?([a-zA-Z0-9]*)?/?$ index.php?controller=$1&action=$2&id=$3 [NC,L]RewriteRule ^(([a-z]+)(/([a-z]+)(/([0-9]+))?)?)?/?$ index.php?controller=$2&action=$4&id=$6 [QSA,NC,L]RewriteRule ^(([a-z]+)(/([a-z]+)(/([0-9]+))?)?)?/?$ index.php?controller=$2&action=$4&id=$6 [QSA,NC,L]RewriteRule ^(([a-z]+)(/([a-z]+)(/([0-9]+))?)?)?/?$ index.php?controller=$2&action=$4&id=$6 [QSA,NC,L]
