--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,8 @@
-# Rewrite an URL from xxx/yyy/zzz type to index.php?controleur=xxx&action=yyy&id=zzz
+ErrorDocument 404 /P3/Blog-MVC/404_redirect.php
+
+#RewriteCond %{REQUEST_URI} ^/404/$
+#RewriteRule ^(.*)$ /errors/404.php [L]
+
 # Rewrite an URL from xxx/yyy/zzz type to index.php?controleur=xxx&action=yyy&id=zzz and resend extra parameter like ?page=x with QSA
 RewriteEngine on
-RewriteRule ^([a-zA-Z]*)/?([a-zA-Z]*)?/?([a-zA-Z0-9]*)?/?$ index.php?controller=$1&action=$2&id=$3 [NC,L]RewriteRule ^(([a-z]+)(/([a-z]+)(/([0-9]+))?)?)?/?$ index.php?controller=$2&action=$4&id=$6 [QSA,NC,L]RewriteRule ^(([a-z]+)(/([a-z]+)(/([0-9]+))?)?)?/?$ index.php?controller=$2&action=$4&id=$6 [QSA,NC,L]RewriteRule ^(([a-z]+)(/([a-z]+)(/([0-9]+))?)?)?/?$ index.php?controller=$2&action=$4&id=$6 [QSA,NC,L]
+RewriteRule ^(([a-z]+)(/([a-z]+)(/([0-9]+))?)?)?/?$ index.php?controller=$2&action=$4&id=$6 [QSA,NC,L]
